# megle

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  compose.yaml  package-lock.json  package.json  start-desktop.cmd  start-web.cmd  tsconfig.base.json
.serena/: project.yml
.tmp/visual-check/: desktop-ui-regression.mjs
apps/: README.md
apps/desktop/: README.md  package.json  tsconfig.json
apps/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
contracts/: README.md
contracts/core-api/: README.md  openapi.yaml
contracts/plugins/: README.md  manifest.schema.json
crates/: README.md
crates/core/: Cargo.toml  README.md
crates/core/migrations/: 0001_initial.sql  0002_task_progress.sql  0003_browsing_indexes.sql  0004_thumbnail_state.sql  0005_thumbnail_source_fingerprint.sql  0006_thumbnail_task_attempt_fingerprint.sql  0007_task_status_contract.sql  0008_task_attempt_generation.sql  0009_scan_reconciliation.sql  0010_media_fts_contentless_delete.sql  0011_plugins_extended.sql  0012_preview_pipeline_refactor.sql  0013_preview_served_by.sql  0015_root_status_browsing_indexes.sql  0016_folder_status_browsing_indexes.sql  0017_thumbnail_task_indexes.sql
crates/core/src/: main.rs  tasks.rs
crates/core/src/api/: mod.rs  routes.rs
crates/core/src/db/: migrations.rs  mod.rs
crates/core/src/fsops/: mod.rs
crates/core/src/plugins/: manifest.rs  mod.rs
crates/core/src/roots/: mod.rs
crates/core/src/scan/: mod.rs
crates/core/src/thumbnails/: mod.rs
crates/core/src/watch/: mod.rs
docs/: README.md  architecture.md  component-library-review.md  deployment.md  final-solution.md  implementation-roadmap.md  open-questions.md  performance-plan.md  plugin-and-web-roadmap.md  product-brief.md  project-structure.md  release-checklist.md  testing-strategy.md
docs/archive/: README.md  open-source-products-review.md  open-source-stack-review.md
docs/performance-results/: file-ops-2026-05-16.md  filesystem-scan-2026-05-16.md  persistent-thumbnail-cache-pressure-2026-06-02.md  persistent-thumbnail-cache-pressure-2026-06-03.md  preview-switch-2026-05-16.md  sqlite-1m-2026-05-16.md  sqlite-5m-2026-05-16.md  thumbnail-pipeline-2026-05-16.md  virtual-grid-2026-05-16.md
tests/: README.md
(+150 files in other folders)
