[workspace]
resolver = "2"
members = [
  "crates/core"
]

[workspace.package]
edition = "2021"
license = "UNLICENSED"
repository = "https://local.invalid/megle"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
rusqlite = { version = "0.32", features = ["bundled", "backup", "functions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v7", "serde"] }
walkdir = "2"
