[package]
name = "megle-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra = { version = "0.9", features = ["query"] }
notify = "8.2.0"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
trash = "5"
uuid.workspace = true
walkdir.workspace = true
